infrastructure/03-traefik/overlay-external/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: web
    nodeport: 80
  - name: websecure
    port: 443
    protocol: TCP
    targetPort: websecure
    nodeport: 443
  - name: dns
    port: 53
    protocol: UDP
    targetPort: dns
    nodeport: 53
